--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <script src="http://localhost:8098"></script> -->
     <!-- <link rel="stylesheet" href="<%= BASE_URL %>fonts/daysOne.css"> -->
-    <title>vue-imooc-ebook</title>
+    <title>ebook</title>
   </head>
   <body>
     <noscript>
